--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <hi> UNLOCKING KENYAN POTENTIAL FOR EXCELLENCE </hi>
