--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <hi> UNLOCKING KENYAN POTENTIAL FOR EXCELLENCE </hi>
+    <h1> UNLOCKING KENYAN POTENTIAL FOR EXCELLENCE </h1>
 
-    <img src="" />
+    <img src=>
 
     <p>We are global community of Techs</p>
 
